--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ main {
 
 .catch_a_fire_titles h2 {
     font-size: 2.3vw;
-    margin-top: -4.3vw;
+    margin-top: -1.5em;
     margin-left: 0.3vw;
     font-weight: bold;
     word-spacing: 0.1vw;
