--- a/styles.css
+++ b/styles.css
@@ -390,7 +390,7 @@ main {
 
 .soul_rebel_titles h2 {
     font-size: 2.3vw;
-    margin-top: -7.3vw;
+    margin-top: -1.5em;
     margin-left: 0.3vw;
     font-weight: bold;
     word-spacing: 0.1vw;
