--- a/styles.css
+++ b/styles.css
@@ -127,12 +127,11 @@ main {
 .catch_a_fire_titles h1 {
     font-family: "Bungee Outline";
     font-size: 4.2vw;
-    margin-top: -0.5vw;
+    margin-bottom: 1vw;
 }
 
 .catch_a_fire_titles h2 {
     font-size: 2.3vw;
-    margin-top: -2.5em;
     margin-left: 0.3vw;
     font-weight: bold;
     word-spacing: 0.1vw;
@@ -385,12 +384,11 @@ main {
 .soul_rebel_titles h1 {
     font-family: "Bungee Outline";
     font-size: 4.2vw;
-    margin-top: -0.5vw;
+    margin-bottom: 1vw;
 }
 
 .soul_rebel_titles h2 {
     font-size: 2.3vw;
-    margin-top: -1.5em;
     margin-left: 0.3vw;
     font-weight: bold;
     word-spacing: 0.1vw;
@@ -659,7 +657,6 @@ main {
 
     .catch_a_fire_titles h2 {
         font-size: 25px;
-        margin-top: -2.5em;
         margin-left: 0.2vw;
     }
 
@@ -675,7 +672,6 @@ main {
     .song_list1 div h2 {
         font-size: 16px;
         margin-left: 2vw;
-        margin-top: 2vw;
     }
 
     .song_list1 div ul {
@@ -695,7 +691,6 @@ main {
 
     .soul_rebel_titles h2 {
         font-size: 25px;
-        margin-top: -80px;
         margin-left: 0.2vw;
     }
 
