--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ main {
     border-radius: 10px;
     display: grid;
     grid-template-columns: 0.5fr 0.5fr;
-    grid-auto-rows: 0.5fr;
+    grid-template-rows: 1fr 0.5fr;
     background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -145,7 +145,7 @@ main {
 .album_description p {
     font-family: "Barlow Semi Condensed";
     font-size: 1.2vw;
-    width: 35vw;
+    width: 32vw;
 }
 
 .musicians1 {
@@ -165,7 +165,6 @@ main {
 }
 
 .cover {
-    margin-right: -5vw;
     margin-top: 1vw;
     justify-self: center;
     grid-column: 2;
@@ -173,8 +172,8 @@ main {
     display: grid;
     align-self: start;
     grid-template-columns: 1fr;
-    width: 75%;
-    height: 75%;
+    width: 100%;
+
 }
 
 .show_not_hover1 {
@@ -205,24 +204,21 @@ main {
 
 .song_list1 {
     display: flex;
-    align-self: ;
     justify-content: space-evenly;
     gap: 0.5vw;
     grid-column: 2;
     grid-row: 2;
     justify-self: center;
-    margin-right: -5vw;
-    top: 26vw;
-    position: relative;
-    grid-row: 1;
-    height: 22.5vw;
+    align-self: start;
+    height: 90%;
+    width: 100%;
 }
 
 .song_list1 div {
     background: linear-gradient(green, yellow, red);
     color: black;
-    width: 12vw;
-    height: 12.2vw;
+    margin-top: 0.5vw;
+    width: 100%;
 }
 
 .song_list1 div h2 {
@@ -257,7 +253,7 @@ main {
 }
 
 .anecdotes1 {
-    align-self: end;
+    align-self: center;
     list-style: none;
     grid-row: 3;
     grid-column: 1 / 4;
@@ -337,8 +333,8 @@ main {
     font-weight: bold;
     text-shadow: 1px 1px blue;
     font-size: 0.9vw;
-    width: 9vw;
-    height: 11.5vw;
+    height: 100%;
+    width: 45%;
     grid-row: 2;
     grid-column: 3;
     position: relative;
@@ -673,7 +669,7 @@ main {
     }
 
     .album_description p {
-        width: 35vw;
+        width: 32vw;
         font-size: 14px;
     }
 
@@ -738,7 +734,7 @@ main {
     }
 
     .catch_a_fire_titles h1 {
-        font-size: 38px;
+        font-size: 34px;
     }
 
     .catch_a_fire_titles h2 {
@@ -750,7 +746,7 @@ main {
     }
 
     .album_description p {
-        font-size: 11px;
+        font-size: 10px;
     }
 
     .song_list1 div h2 {
