--- a/styles.css
+++ b/styles.css
@@ -808,6 +808,7 @@ main {
         grid-row: 1;
         align-self: end;
         grid-column: 1 / 3;
+        margin-top: 1vw;
     }
 
     .show_hover1 {
