--- a/styles.css
+++ b/styles.css
@@ -808,7 +808,6 @@ main {
         grid-row: 1;
         align-self: end;
         grid-column: 1 / 3;
-        margin-top: 1vw;
     }
 
     .show_hover1 {
@@ -866,6 +865,10 @@ main {
         font-size: 1.5vw;
     }
 
+    .catch_a_fire_titles {
+        margin-top: 1vw;
+    }
+
     .catch_a_fire_titles h1 {
         font-size: 6vw;
         margin: 0;
@@ -879,28 +882,30 @@ main {
 
     .musicians1 {
         font-size: 1.5vw;
+        margin: 0;
     }
 
     .album_description p {
         font-size: 1.5vw;
+        margin: 0;
         width: 67vw;
     }
 
     .anecdotes1 {
-        margin-top: 8vw;
-        grid-row: 3;
+        height: 100%;
+        grid-row: 2;
         grid-template-columns: 1fr 1fr;
     }
 
     .anecdotes1 li:nth-child(1) {
         grid-row: 1;
         width: 13vw;
-        height: 14vw;
+        height: 90%;
         font-size: 1.4vw;
     }
 
     .anecdotes1 li:nth-child(3) {
-        height: 14vw;
+        height: 100%;
         width: 33vw;
         font-size: 1.4vw;
         grid-row: 1;
