--- a/styles.css
+++ b/styles.css
@@ -204,11 +204,10 @@ main {
 
 .song_list1 {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     gap: 0.5vw;
     grid-column: 2;
     grid-row: 2;
-    justify-self: center;
     align-self: start;
     height: 90%;
     width: 100%;
@@ -474,7 +473,6 @@ main {
 .song_list2 {
     display: flex;
     align-self: start;
-    justify-content: space-evenly;
     gap: 0.5vw;
     grid-column: 2;
     grid-row: 2;
@@ -943,10 +941,11 @@ main {
 
     /* Andra albumet */
 
+
+
     .album_data2 {
         grid-row: 2;
-        position: relative;
-        top: 3.5vw;
+        align-self: end;
         grid-column: 1 / 3;
     }
 
@@ -969,17 +968,19 @@ main {
     }
 
     .song_list2 {
+        grid-row: 1;
         flex-direction: column;
-        width: 32vw;
-        height: 35vw;
-        position: relative;
-        top: 6vw;
+        gap: 0.5vw;
+        height: 100%;
         left: 0.5vw;
+        margin-top: 1vw;
+        margin-left: 0.5vw;
     }
 
     .song_list2 div {
         width: 29vw;
-        height: 19vw;
+        height: 17vw;
+
     }
 
     .song_list2 div:nth-child(1) {
@@ -1003,7 +1004,6 @@ main {
     }
 
     .soul_rebel_titles h2 {
-        margin-top: -9vw;
         font-size: 2.7vw;
     }
 
@@ -1013,10 +1013,10 @@ main {
 
     .album_description2 p {
         font-size: 1.5vw;
+        width: 100%;
     }
 
     .anecdotes2 {
-        margin-top: 8vw;
         grid-row: 3;
         grid-template-columns: 1fr 1fr;
     }
