soul rebel titles margins

--- a/styles.css
+++ b/styles.css
@@ -999,8 +999,13 @@ main {
         font-size: 1.4vw;
     }
 
+    .soul_rebel_titles {
+        margin-top: 2vw;
+    }
+
     .soul_rebel_titles h1 {
         font-size: 6vw;
+        margin-top:
     }
 
     .soul_rebel_titles h2 {
