--- a/styles.css
+++ b/styles.css
@@ -1272,9 +1272,11 @@ main {
     /* Andra albumet */
 
     #soul_rebel {
-        height: 157vw;
+        height: 182vw;
         width: 75vw;
     }
+
+    /*asdas*/
 
     .cover2 {
         grid-column: 1 / 3;
