--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,8 @@ header {
     font-family: "Bungee Shade";
     color: white;
     font-size: 4vw;
-    margin-top: -5vw;
-    margin-bottom: 1vw;
+    /* margin-top: -5vw */
+    margin-bottom: 6vw;
 }
 
 .navmenu {
@@ -801,14 +801,19 @@ main {
 
     header {
         text-align: center;
-        margin-bottom: -3.5vw;
+        /* margin-bottom: -3.5vw; */
     }
 
     .navmenu {
-        margin-top: 4vw;
-        margin-bottom: 4vw;
+        margin-top: 1vw;
+        margin-bottom: 1vw;
     }
 
+    main {
+        margin-top: 8vw;
+        /* hade ingen margin här men la till den. Ersatte med marginaler i navmenu och genom att lägga
+        till marginaler i main*/
+    }
 
     .album_data {
         grid-row: 1;
@@ -1092,7 +1097,7 @@ main {
     }
 
     header {
-        margin: -5vw 0 25vw 0;
+        margin-bottom: 5vw;
         font-size: 8vw;
         line-height: 1.2;
         text-align: center;
@@ -1281,18 +1286,15 @@ main {
     .cover2 {
         grid-column: 1 / 3;
         display: flex;
-        height: 51vw;
-        width: 74vw;
-        margin: 0.5vw 0.5vw 0.5vw 0.5vw;
-        justify-self: center;
+        width: 100%;
+        margin: 0;
     }
 
     .show_not_hover2 {
-        width: 74vw;
-        height: 51vw;
-        margin-top: 1vw;
+        width: 100%;
         z-index: 1;
         border-radius: 15px 15px 0 0;
+        margin-top: 1vw;
     }
 
     .show_not_hover2:hover {
@@ -1304,17 +1306,17 @@ main {
     }
 
     .song_list2 {
-        position: relative;
-        top: 45vw;
         margin: 0;
         width: 100%;
         grid-column: 1 / 3;
         justify-self: center;
+        align-self: start;
+        top: 0;
+        margin-top: 1vw;
     }
 
     .song_list2 div {
-        width: 100%;
-        height: 100%;
+        width: 49%;
     }
 
     .song_list2 div h2 {
@@ -1336,21 +1338,23 @@ main {
     }
 
     .album_data2 {
-        margin-top: 74vw;
         grid-column: 1 / 3;
+        grid-row: 3;
+        align-self: start;
+    }
+
+    .soul_rebel_titles {
+        margin: 0;
     }
 
     .soul_rebel_titles h1 {
         font-size: 7vw;
-        position: relative;
-        bottom: 3.5vw;
+        margin: 0;
     }
 
     .soul_rebel_titles h2 {
-        position: relative;
-        bottom: 8vw;
-        font-size: 3.5vw;
-        margin-bottom: -4.5vw;
+        font-size: 3vw;
+        margin: 0;
     }
 
     .musicians2 {
@@ -1372,21 +1376,21 @@ main {
         padding: 0;
         right: 0;
         display: grid;
-        grid-template-rows: 40vw;
-        grid-template-columns: 0.5fr 0.5fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 0.5fr 1fr;
+        grid-row: 4;
     }
 
     .anecdotes2 li {
         font-family: "Barlow Condensed";
         font-size: 1.3vw;
-        grid-template-columns: 1fr 0.5fr;
     }
 
     .anecdotes2 li:nth-child(1) {
-        grid-row: 1 / 2;
-        grid-column: 1;
-        width: 140%;
-        height: 50%;
+        grid-row: 1;
+        grid-column: 1 / 3;
+        width: 100%;
+        height: 100%;
         border-radius: 10px 10px 10px 0;
         align-self: start;
         font-size: 2vw;
@@ -1394,33 +1398,33 @@ main {
 
     .anecdotes2 li:nth-child(2) {
         grid-row: 1;
-        grid-column: 2;
+        grid-column: 3;
         justify-self: end;
         align-self: start;
-        height: 50%;
-        width: 58%;
+        height: 98%;
+        width: 99%;
         border-radius: 0 10px 10px 10px;
         font-size: 2vw;
     }
 
     .anecdotes2 li:nth-child(5) {
-        height: 49%;
-        width: 140%;
+        height: 96%;
+        width: 98%;
         font-size: 2.5vw;
         justify-self: start;
-        grid-row: 1;
-        grid-column: 1;
-        left: 1vw;
+        grid-row: 2;
+        grid-column: 1 / 3;
         background-image: url(./media/phone-tablet/400\ years-tab.jpg);
         background-position: center;
         background-size: cover;
+        left: 0;
     }
 
     .anecdotes2 li:nth-child(6) {
-        grid-row: 1;
-        grid-column: 2;
-        height: 49%;
-        width: 55%;
+        grid-row: 2;
+        grid-column: 3;
+        height: 100%;
+        width: 97%;
         justify-self: end;
         font-size: 2vw;
 
